Bug fix - collapse - on hover, focus,active yellow color issue fix done

--- a/css/mobile-checker.css
+++ b/css/mobile-checker.css
@@ -154,8 +154,9 @@ input::-webkit-date-and-time-value {
 }
 
 .collapse-left:hover,
+.collapse-left:focus,
 .collapse-left:active {
-    background-color: transparent;
+    background-color: var(--color-light-gray) !important;
     border: none;
 }
 
